; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_user_randomize.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_user_randomize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rnd_seed_a = common dso_local global i32 0, align 4
@rnd_seed_b = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @user_randomize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @user_randomize(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = mul i32 %3, -1640531523
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = udiv i32 %5, 42950
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = urem i32 %7, 100
  %9 = mul i32 10, %8
  %10 = add i32 7, %9
  store i32 %10, i32* @rnd_seed_a, align 4
  %11 = load i32, i32* %2, align 4
  %12 = udiv i32 %11, 100
  %13 = urem i32 %12, 1000
  store i32 %13, i32* @rnd_seed_b, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
